# Multi-agent-AI-Ecommerce

./: .dockerignore  .env  .env.correct  .env.example  .env.production.example  .env.test  .gitignore  100_PERCENT_COMPLETION_REPORT.md  100_PERCENT_PRODUCTION_READY_CERTIFICATION.md  ACCURATE_FINAL_STATUS_REPORT.md  ACCURATE_PRODUCTION_READINESS_REPORT.md  ADMIN_PAGES_INTEGRATION_PLAN.md  ADMIN_PERSONA_FINAL_VALIDATION_REPORT.md  AGENT_ARCHITECTURE_DIAGRAM.mmd  AGENT_FIXES_COMPLETION_REPORT.md  AGENT_IMPLEMENTATION_MASTER_PLAN.md  AGENT_PORT_ASSIGNMENT.md  AGENT_PORT_REFERENCE.md  AGENT_STARTUP_FIXES.md  AGENT_STARTUP_REPORT.md  AGENT_TESTING_REPORT.md  AGENT_VALIDATION_REPORT.md  AGENT_WORKFLOWS.md  AGENT_WORKFLOWS_AND_COLLABORATION.md  ALL_26_AGENTS_COMPLETE_FINAL_SUMMARY.md  ALL_26_AGENTS_FINAL_REPORT.md  ALL_26_AGENTS_FINAL_STATUS.md  ALL_FIXES_COMPLETE_SUMMARY.md  ANALYTICS_INTEGRATION_STATUS.md  APP_ROUTING_FIX.md  AddMissingTables.bat  BACKEND_API_UPDATE_GUIDE.md  BACKGROUND_WORK_PROGRESS.md  BUGS_FIXED.txt  BUGS_FOUND_AND_FIXED.md  BUGS_TO_FIX.txt  BUG_FIXES_SUMMARY.md  BUG_FIX_JWT_TOKEN_FORMAT.md  BUG_TRACKING.md  CHANGELOG.md  (+364 more)
agents/: 0_MeH9HOwzioGWGTBo6OXLRK_1761114583254_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvYWlfbW9uaXRvcmluZ19hZ2VudA.py  0_zzsHNYzqN9TLEIrjP3G6Ut_1761081715267_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvb3JkZXJfYWdlbnRfcHJvZHVjdGlvbg.py  10_HlDz2GrZvKt1Sxz64x9K8r_1761082408672_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvYWlfbW9uaXRvcmluZ19hZ2VudA.py  10_f5sBU7olpx6u4pj0LunnYV_1761114534437_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvd2FyZWhvdXNlX2FnZW50.py  11_DDoRZ5Liy2GzPmOkI2oXts_1761114434124_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvd29ya2Zsb3dfb3JjaGVzdHJhdGlvbl9hZ2VudA.py  12_AJMDCtINFNxlcHbNQRERtA_1761114445587_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvdHJhbnNwb3J0X21hbmFnZW1lbnRfYWdlbnRfZW5oYW5jZWQ.py  14_czjaZwx1gSe3MRA3kPA1zr_1761081513564_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvY29tcGxpYW5jZV9hZ2VudA.py  15_SexPrXVPQykGCt6l7zFyXR_1761081574545_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvY3VzdG9tZXJfYWdlbnRfcGVyZmVjdGVk.py  16_8SC15yr5okRe9e8pJjgUDy_1761081651575_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvY3VzdG9tZXJfY29tbXVuaWNhdGlvbl9hZ2VudA.py  17_AsFyuWRaAWRr72XPgZiOGK_1761081962090_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvZGVtYW5kX2ZvcmVjYXN0aW5nX2FnZW50.py  18_WKW5eXOaAuwBmnQN7C5ZXy_1761081694464_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvZG9jdW1lbnRfZ2VuZXJhdGlvbl9hZ2VudA.py  19_CcHqbPwt7L1SCcdQbYYAvI_1761081897558_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvZnJhdWRfZGV0ZWN0aW9uX2FnZW50X3BlcmZlY3RlZA.py  1_0P4oPZj6zSud8AxKb3L6zB_1761115060194_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvY2Fycmllcl9zZWxlY3Rpb25fYWdlbnQ.py  1_WLLyY3Fysb0JVQYwiv4S7e_1761081774780_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvaW52ZW50b3J5X2FnZW50.py  20_oBwOkt45RHLil6HdTeczar_1761082095511_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvaW5mcmFzdHJ1Y3R1cmVfYWdlbnRz.py  21_rgna0izdvjiSMYRV76SOyI_1761081835144_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvaW52ZW50b3J5X2FnZW50X2VuaGFuY2Vk.py  22_zjxoIEIUWPm10dJeaSlFgL_1761081807819_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMva25vd2xlZGdlX21hbmFnZW1lbnRfYWdlbnQ.py  23_okXJwkuQOoEEGx2CRA7Rst_1761081835480_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvbWFya2V0cGxhY2VfY29ubmVjdG9yX2FnZW50.py  25_a8w2VCZQEL6Y2hPlBpZqmw_1761081951300_na1fn_L2hvbWUvdWJ1bnR1L3BlcmZlY3RlZF9vcmRlcl9hZ2VudA.py  26_88nVr31f1SHZt4b8rvvuTt_1761081868490_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvb3JkZXJfYWdlbnRfcHJvZHVjdGlvbl92Mg.py  27_4rU8F9skJeTv9iYyCnd3dp_1761083156916_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvcHJvZHVjdF9hZ2VudA.py  28_QnPRLuO6xRd9ucpdjlWqg2_1761081976896_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvcHJvZHVjdF9hZ2VudF9hcGlfcGVyZmVjdGVk.py  29_yXA3whll1yDCHy583ut0ZN_1761083591428_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9wZXJmZWN0ZWRfcHJvbW90aW9uX2FnZW50.py  2_WhvJGKVy4qDdfJa8r3lZQo_1761081650188_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvcHJvZHVjdF9hZ2VudF9wcm9kdWN0aW9u.py  2_tUvLZcmllW7tLtHldD41al_1761114500224_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvY3VzdG9tZXJfY29tbXVuaWNhdGlvbl9hZ2VudA.py  31_wkvpusLKLUzb7dOxO0zbPF_1761081991179_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvcmV0dXJuc19hZ2VudF9wZXJmZWN0ZWQ.py  32_A2Y6HC9IyiGaqUKUDt2Vfl_1761082039807_na1fn_L2hvbWUvdWJ1bnR1L011bHRpLWFnZW50LUFJLUVjb21tZXJjZS9hZ2VudHMvcmV2ZXJzZV9sb2dpc3RpY3NfYWdlbnQ.py  (+200 more)
api/: main.py  main_secured.py  product_api.py
database/: __init__.py  (+14 more)
(+443 files in other folders)
